Make Performance an asset